
[workspace]
package.version = "0.7.0"
package.edition = "2021"
package.license = "MIT OR Apache-2.0"

[package]
name = "egui-probe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Trait and derive macro for exposing value editing in egui"

[features]
derive = ["dep:egui-probe-proc"]

[dependencies]
egui-probe-proc = { path = "proc", version = "=0.7.0", optional = true }
egui = { version = "0.30" }

smallvec1 = { package = "smallvec", version = "1", features = [
    "const_generics",
], optional = true }
smallvec2 = { package = "smallvec", version = "2.0.0-alpha.9", optional = true }
hashbrown = { version = "0.15", optional = true }

[dev-dependencies]
eframe = "0.30"
edict = "1.0.0-rc6"

[[example]]
name = "demo"
required-features = ["derive"]

[[example]]
name = "edict"
required-features = ["derive"]
