
[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zakarumych/egui-probe"
rust-version = "1.81"

[package]
name = "egui-probe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Trait and derive macro for exposing value editing in egui"
documentation = "https://docs.rs/egui-probe"
repository.workspace = true
rust-version.workspace = true

[features]
derive = ["dep:egui-probe-proc"]

[dependencies]
egui-probe-proc = { path = "proc", version = "=0.7.0", optional = true }
egui = { version = "0.31.0" }

smallvec1 = { package = "smallvec", version = "1", features = [
    "const_generics",
], optional = true }
smallvec2 = { package = "smallvec", version = "1.13.2", optional = true }
hashbrown = { version = "0.15", optional = true }

[dev-dependencies]
eframe = "0.31.0"
edict = "0.6.1"

[[example]]
name = "demo"
required-features = ["derive"]

[[example]]
name = "edict"
required-features = ["derive"]

[package.metadata.docs.rs]
features = ["derive"]
