[package]
name = "egui-probe-proc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Derive macro for egui-probe crate"
documentation = "https://docs.rs/egui-probe-proc"
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-easy = "0.4"
convert_case = "0.8"
